--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -53,7 +53,7 @@ a:hover {
 
 #wrapper {
 	padding: 0px 10%;
-	background: url(images/main-image-bg.jpg) no-repeat center top;
+	background: url(/images/main-image-bg.jpg) no-repeat center top;
 }
 
 /* Header */
@@ -77,7 +77,7 @@ a:hover {
 #logo h1, #logo p {
 	margin: 0;
 	padding: 0;
-}
+}           
 
 #logo h1 {
 	line-height: 100px;
@@ -303,7 +303,7 @@ a:hover {
 }
 
 #sidebar li a {
-	background: url(images/img03.gif) no-repeat left 6px;
+	background: url(/images/img03.gif) no-repeat left 6px;
 }
 
 #sidebar li li span {
